fix(client/relate-collection-field-menu): fix relate collection field menu view too long error

--- a/packages/core/client/src/schema-initializer/style.less
+++ b/packages/core/client/src/schema-initializer/style.less
@@ -1,4 +1,4 @@
-.menu-item-group {
+.menuItemGroup {
   max-height: 60vh;
   overflow: auto;
 }
